<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:paddingTop="25dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_negrito"
                android:text="Nova viagem"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:layout_alignParentLeft="true" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/cinza"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <EditText
                android:id="@+id/txtTituloViagem"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="text"
                android:fontFamily="@font/roboto"
                android:hint="@string/hintTituloViagem"
                tools:ignore="Autofill"
                android:paddingLeft="25dip"
                android:background="@drawable/borda_input"
                android:layout_marginBottom="5dp"/>

            <EditText
                android:id="@+id/txtNumViajantes"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="number"
                android:fontFamily="@font/roboto"
                android:hint="@string/hintNumeroViajantes"
                tools:ignore="Autofill"
                android:paddingLeft="25dip"
                android:background="@drawable/borda_input"
                android:layout_marginBottom="5dp" />

            <EditText
                android:id="@+id/txtDuracao"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="number"
                android:fontFamily="@font/roboto"
                android:hint="@string/hintDuracaoViagem"
                tools:ignore="Autofill"
                android:paddingLeft="25dip"
                android:background="@drawable/borda_input"
                android:layout_marginBottom="5dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:fontFamily="@font/roboto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Custos opcionais"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="20dp" />

            <Switch
                android:id="@+id/swtGasolina"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblgasolina"
                android:fontFamily="@font/roboto"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <Switch
                android:id="@+id/swtTarifaAerea"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbltarifa"
                android:fontFamily="@font/roboto"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <Switch
                android:id="@+id/swtHospedagem"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblhospedagem"
                android:fontFamily="@font/roboto"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <Switch
                android:id="@+id/swtRefeicoes"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblrefeicoes"
                android:fontFamily="@font/roboto"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <Switch
                android:id="@+id/swtEntretenimento"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblentretenimento"
                android:fontFamily="@font/roboto"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>
        <Button
            android:id="@+id/btnProximo"
            android:fontFamily="@font/roboto"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
            android:text="Próximo"
            android:background="@drawable/borda_fundo"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btnCancelarNovaViagem"
            android:fontFamily="@font/roboto"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="Cancelar"
            android:background="@drawable/borda_semfundo"
            android:textColor="@color/yaleblue" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>