<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/branco"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:background="@color/branco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:adjustViewBounds="true"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/txtLoginEmail"
            android:inputType="text"
            android:fontFamily="@font/roboto"
            android:hint="@string/hintUsuario"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="5dp"
            android:paddingLeft="25dip"
            android:importantForAutofill="no"
            android:background="@drawable/borda_input" />

        <EditText
            android:id="@+id/txtLoginSenha"
            android:inputType="textPassword"
            android:fontFamily="@font/roboto"
            android:hint="@string/hintSenha"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="5dp"
            android:paddingLeft="25dip"
            android:importantForAutofill="no"
            android:background="@drawable/borda_input" />

        <Button
            android:id="@+id/btnLogin"
            android:fontFamily="@font/roboto"
            android:text="@string/btnEntrarString"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/borda_fundo"
            android:textColor="@color/white"/>

        <CheckBox
            android:id="@+id/ckbManter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mantenha-me conectado" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/roboto_negrito"
            android:text="@string/frase2"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnCadastrar"
            android:fontFamily="@font/roboto"
            android:text="@string/btnCadastrarString"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/borda_semfundo"
            android:textColor="@color/yaleblue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>