<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:paddingTop="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_negrito"
                android:text="@string/lblentretenimento"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:layout_alignParentLeft="true" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/cinza"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <EditText
                android:id="@+id/txtDescricaoAtividade"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="text"
                android:fontFamily="@font/roboto"
                android:hint="@string/lblinsiraatividade"
                tools:ignore="Autofill"
                android:paddingLeft="25dip"
                android:background="@drawable/borda_input"
                android:layout_marginBottom="5dp" />

            <EditText
                android:id="@+id/txtValorAtividade"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="numberDecimal"
                android:fontFamily="@font/roboto"
                android:hint="@string/lblvaloratividade"
                tools:ignore="Autofill"
                android:paddingLeft="25dip"
                android:background="@drawable/borda_input"
                android:layout_marginBottom="5dp"/>

            <Button
                android:id="@+id/btnAddAtividade"
                android:fontFamily="@font/roboto"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:text="Adicionar"
                android:background="@drawable/borda_fundo"
                android:textColor="@color/white"
                android:layout_marginBottom="15dp"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="180dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:id="@+id/lista_atracoes"/>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <Button
            android:id="@+id/btnProximo5"
            android:fontFamily="@font/roboto"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:background="@drawable/borda_fundo"
            android:textColor="@color/white"
            android:text="Salvar Viagem"/>

        <Button
            android:id="@+id/btnCancelarNovaEntretenimento"
            android:fontFamily="@font/roboto"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:background="@drawable/borda_semfundo"
            android:textColor="@color/yaleblue"
            android:text="Cancelar"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>